--- a/roles/httpd/tasks/main.yaml
+++ b/roles/httpd/tasks/main.yaml
@@ -1,7 +1,16 @@
 - name: Install apache2
-  shell: apk add apache2 || true
+  shell: apk add apache2; true
   args:
     creates: /usr/sbin/httpd
 
+- name: Check if Namenode is running
+  tags: namenode
+  shell: ps -ef | grep -v grep | grep httpd
+  ignore_errors: yes
+  changed_when: false
+  failed_when: "httpd_status.rc == 2"
+  register: httpd_status
+
 - name: start apache
-  shell: nohup httpd & 
+  shell: nohup httpd &
+  when: httpd_status.rc == 1
