--- a/roles/website/tasks/main.yaml
+++ b/roles/website/tasks/main.yaml
@@ -7,6 +7,5 @@
 - name: add color to css
   lineinfile:
     path: /var/www/localhost/htdocs/assets/css/main.css
-    regexp: '^		background: linear-gradient'
-    line: "background: linear-gradient(to bottom, {{background_color}}, white 80%, rgb(29, 60, 117));"
-    line: Listen 8080
+    regexp: '^.*background: linear-gradient'
+    line: "   background: linear-gradient(to bottom, {{background_color}}, white 80%, rgb(29, 60, 117));"
